--- a/Documentation/magit.texi
+++ b/Documentation/magit.texi
@@ -4583,6 +4583,15 @@ as-is.
 
 Reset the @code{HEAD}, index, and working tree to some commit read from the
 user and defaulting to the commit at point.
+
+@kindex M-x magit-checkout-file
+@cindex magit-checkout-file
+@item @kbd{M-x magit-checkout-file} @tie{}@tie{}@tie{}@tie{}(@code{magit-checkout-file})
+
+Update file in the working tree and index to the contents from a
+revision.
+
+Both the revision and file are read from the user.
 @end table
 
 @node Stashing
